graphics/blender: update to 5.0.1
 - a new port graphics/blender4 provides v4.5.x for compatibility

Changelog: https://developer.blender.org/docs/release_notes/5.0/
Changelog: https://developer.blender.org/docs/release_notes/5.0/corrective_releases/
Changelog: https://www.blender.org/download/lts/4-5/#versions

PR:		282988
Reported by:	kunda <luzpaz@pm.me>

--- a/graphics/blender4/Makefile
+++ b/graphics/blender4/Makefile
@@ -1,49 +1,53 @@
-PORTNAME=	blender
-DISTVERSION=	5.0.1
-PORTREVISION=	0
+PORTNAME=	blender4
+DISTVERSION=	4.5.5
 CATEGORIES=	graphics multimedia
 MASTER_SITES=	http://download.blender.org/source/ \
 		http://mirror.cs.umn.edu/blender.org/source/ \
 		http://public.planetmirror.com/pub/blender/source/
+DISTNAME=	blender-${DISTVERSION}
 
 MAINTAINER=	FreeBSD@Shaneware.biz
-COMMENT=	3D modeling/rendering/animation package
+COMMENT=	3D modeling/rendering/animation package -v4.x
 WWW=		https://www.blender.org/
 
 LICENSE=	GPLv3+
 LICENSE_FILE=	${WRKSRC}/doc/license/GPL3-license.txt
 
-ONLY_FOR_ARCHS=		aarch64 amd64 powerpc64le riscv64
+ONLY_FOR_ARCHS=		aarch64 amd64 powerpc64 powerpc64le riscv64
 ONLY_FOR_ARCHS_REASON=	static_assert(sizeof(unsigned long long) == sizeof(struct hipArray*))
 
 BUILD_DEPENDS=	${PYNUMPY}
-LIB_DEPENDS=	libfreetype.so:print/freetype2 \
+LIB_DEPENDS=	libboost_thread.so:devel/boost-libs \
+		libfreetype.so:print/freetype2 \
 		libepoxy.so:graphics/libepoxy \
 		libOpenImageIO.so:graphics/openimageio \
 		libpng.so:graphics/png \
-		libsamplerate.so:audio/libsamplerate \
 		libtiff.so:graphics/tiff \
 		libzstd.so:archivers/zstd
 RUN_DEPENDS=	${PYNUMPY}
+# libboost_regex.so just acts as a placeholder; several boost
+# libraries are used, if either of the most common options in blender
+# are set. We will pull boost in just to be on the safe side.
 
-USES=		cmake:noninja compiler:c++17-lang cpe eigen:3 jpeg llvm:build,run \
-		pkgconfig python:3.11 shebangfix tar:xz xorg
+USES=		cmake:noninja compiler:c++17-lang cpe eigen:3 jpeg llvm:build,run pkgconfig \
+		python:3.11 shebangfix tar:xz xorg
 USE_XORG=	x11 xext xfixes xmu xrender
 
-SHEBANG_FILES=	scripts/modules/blend_render_info.py
+SHEBANG_FILES=	scripts/modules/bl_i18n_utils/merge_po.py \
+		scripts/modules/bl_i18n_utils/utils_rtl.py \
+		scripts/modules/blend_render_info.py
 
 CMAKE_ARGS=	-DCMAKE_CXX_STANDARD:INTEGER=17 \
-		-DLLVM_CONFIG:STRING="${LOCALBASE}/bin/llvm-config${LLVM_VERSION}" \
-		-DCMAKE_POLICY_DEFAULT_CMP0167=NEW
+		-DLLVM_CONFIG:STRING="${LOCALBASE}/bin/llvm-config${LLVM_VERSION}"
 .if defined(WITH_DEBUG)
 CMAKE_ARGS+=	-DWITH_GHOST_DEBUG:BOOL=ON
 .endif
 CMAKE_ON=	WITH_AUDASPACE WITH_BOOST WITH_CLANG WITH_GHOST_X11 WITH_GHOST_XDND \
-		WITH_HYDRA WITH_IO_PLY WITH_IO_STL WITH_IO_WAVEFRONT_OBJ \
+		WITH_HYDRA WITH_IO_GPENCIL WITH_IO_PLY WITH_IO_STL WITH_IO_WAVEFRONT_OBJ \
 		WITH_LLVM WITH_OPENGL_BACKEND WITH_PYTHON WITH_SYSTEM_EIGEN3 \
-		WITH_SYSTEM_FREETYPE WITH_X11_XINPUT WITH_X11_XFIXES
+		WITH_SYSTEM_FREETYPE WITH_X11_XINPUT WITH_X11_XF86VMODE WITH_X11_XFIXES
 CMAKE_OFF=	WITH_GHOST_SDL WITH_INSTALL_PORTABLE WITH_LIBS_PRECOMPILED \
-		LLVM_STATIC WITH_MEM_JEMALLOC WITH_MEM_VALGRIND \
+		LLVM_STATIC WITH_MATERIALX WITH_MEM_JEMALLOC WITH_MEM_VALGRIND \
 		WITH_NANOVDB WITH_PYTHON_INSTALL WITH_PYTHON_INSTALL_NUMPY
 
 CFLAGS+=	${CFLAGS_${CHOSEN_COMPILER_TYPE}}
@@ -52,7 +56,9 @@ CXXFLAGS+=	-DGLOG_USE_GLOG_EXPORT
 LDFLAGS+=	-lexecinfo -Wl,--undefined-version
 
 SUB_FILES=	blender
-PLIST_SUB+=	VER=${DISTVERSION:R}
+LICDIR=		${PREFIX}/share/licenses/${PKGNAME}
+VERS_TAG=	${DISTVERSION:R:C/[.]//g}
+PLIST_SUB+=	VER=${DISTVERSION:R} VERS_TAG=${VERS_TAG}
 OPTIONS_SUB=	yes
 
 .include "${.CURDIR}/Makefile.options"
@@ -60,11 +66,18 @@ OPTIONS_SUB=	yes
 ALEMBIC_CMAKE_BOOL=		WITH_ALEMBIC
 ALEMBIC_IMPLIES=		OPENEXR
 ALEMBIC_LIB_DEPENDS=		libAlembic.so:graphics/alembic
+AVI_CMAKE_BOOL=			WITH_CODEC_AVI
 BULLET_CMAKE_BOOL=		WITH_BULLET
 CAMERATRACK_CMAKE_BOOL=		WITH_LIBMV WITH_SYSTEM_GLOG
 CAMERATRACK_LIB_DEPENDS=	libglog.so:devel/glog
 CINEON_CMAKE_BOOL=		WITH_IMAGE_CINEON
-CYCLES_CMAKE_BOOL=		WITH_CYCLES
+COLLADA_CMAKE_BOOL=		WITH_OPENCOLLADA
+COLLADA_LIB_DEPENDS=		libOpenCOLLADABaseUtils.so:graphics/opencollada \
+				libpcre.so:devel/pcre
+COLLADA_USE=			GNOME=libxml2
+COLLADA_USES=			gnome
+COMPOSITOR_CMAKE_BOOL=		WITH_COMPOSITOR_CPU
+CYCLES_CMAKE_BOOL=		WITH_CYCLES WITH_CYCLES_LOGGING
 CYCLES_IMPLIES=			TBB
 CYCLES_LDFLAGS=			-L${LOCALBASE}/lib -lgflags
 CYCLES_LIB_DEPENDS=		libgflags.so:devel/gflags
@@ -103,21 +116,22 @@ INPUT_NDOF_CMAKE_BOOL=		WITH_INPUT_NDOF
 INPUT_NDOF_LIB_DEPENDS=		libspnav.so:misc/libspnav
 JACK_CMAKE_BOOL=		WITH_JACK WITH_JACK_DYNLOAD
 JACK_LIB_DEPENDS=		libjack.so:audio/jack
+LZMA_CMAKE_BOOL=		WITH_LZMA
+LZO_CMAKE_BOOL=			WITH_LZO WITH_SYSTEM_LZO
+LZO_LIB_DEPENDS=		liblzo2.so:archivers/lzo2
 MANIFOLD_CMAKE_BOOL=		WITH_MANIFOLD
 MANIFOLD_LIB_DEPENDS=		libmanifold.so:math/manifold
-MATERIALX_CMAKE_BOOL=		WITH_MATERIALX
-MATERIALX_CMAKE_ON=		-DMaterialX_DIR:STRING=${PREFIX}/lib/cmake/MaterialX \
-				-DMATERIALX_STDLIB_DIR:STRING=${PREFIX}/share/materialx \
-				-DMATERIALX_PYTHON_DIR:STRING=${PYTHON_SITELIBDIR}/MaterialX
-MATERIALX_LIB_DEPENDS=		libMaterialXCore.so:graphics/materialx
 MENU_USES=			desktop-file-utils
 MOD_FLUID_CMAKE_BOOL=		WITH_MOD_FLUID
 MOD_FLUID_IMPLIES=		TBB
 MOD_OCEANSIM_CMAKE_BOOL=	WITH_MOD_OCEANSIM
 MOD_OCEANSIM_IMPLIES=		FFTW3
 MOD_REMESH_CMAKE_BOOL=		WITH_MOD_REMESH
+# Use iconv:wchar_t to force the usage of iconv from ports.
+# libboost_locale.so uses libiconv_open, while we only provide
+# iconv_open in 10.x+
 NLS_CMAKE_BOOL=			WITH_INTERNATIONAL
-NLS_USES=			gettext-tools
+NLS_USES=			gettext-tools iconv:lib,wchar_t
 OPENAL_CMAKE_BOOL=		WITH_OPENAL
 OPENAL_USES=			openal:al,alut
 OPENCOLORIO_CMAKE_BOOL=		WITH_OPENCOLORIO
@@ -135,6 +149,7 @@ OPENIMAGEDN_IMPLIES=		TBB
 OPENIMAGEDN_LIB_DEPENDS=	libOpenImageDenoise.so:graphics/oidn
 OPENJPEG_CMAKE_BOOL=		WITH_IMAGE_OPENJPEG
 OPENJPEG_LIB_DEPENDS=		libopenjp2.so:graphics/openjpeg
+OPENMP_CMAKE_BOOL=		WITH_OPENMP
 OPENPGL_CMAKE_BOOL=		WITH_CYCLES_PATH_GUIDING
 OPENPGL_LIB_DEPENDS=		libopenpgl.so:graphics/openpgl
 OPENSUBDIV_CMAKE_BOOL=		WITH_OPENSUBDIV
@@ -148,18 +163,12 @@ PIPEWIRE_CMAKE_BOOL=		WITH_PIPEWIRE
 PIPEWIRE_LIB_DEPENDS=		libpipewire-0.3.so:multimedia/pipewire
 POTRACE_CMAKE_BOOL=		WITH_POTRACE
 POTRACE_LIB_DEPENDS=		libpotrace.so:graphics/libpotrace
-PUGIXML_CMAKE_BOOL=		WITH_PUGIXML WITH_IO_GREASE_PENCIL
-# GP IO needs pugixml - turn it off with pugi
-PUGIXML_LDFLAGS=		-lfmt
-PUGIXML_LIB_DEPENDS=		libpugixml.so:textproc/pugixml \
-				libfmt.so:devel/libfmt
-# libfmt is in place via openimageio, add here as we need -lfmt in LDFLAGS
+PUGIXML_CMAKE_BOOL=		WITH_PUGIXML
+PUGIXML_LIB_DEPENDS=		libpugixml.so:textproc/pugixml
 PULSEAUDIO_CMAKE_BOOL=		WITH_PULSEAUDIO WITH_PULSEAUDIO_DYNLOAD
 PULSEAUDIO_LIB_DEPENDS=		libpulse.so:audio/pulseaudio
 QUADRIFLOW_CMAKE_BOOL=		WITH_QUADRIFLOW
-RUBBERBAND_CMAKE_BOOL=		WITH_RUBBERBAND
-RUBBERBAND_LIB_DEPENDS=		librubberband.so:audio/rubberband
-SDL_CMAKE_BOOL=			WITH_SDL
+SDL_CMAKE_BOOL=			WITH_SDL WITH_SDL_DYNLOAD
 SDL_USE=			SDL=sdl2
 SDL_USES=			sdl
 SIMD_CMAKE_BOOL=		WITH_CPU_SIMD
@@ -171,17 +180,17 @@ TBB_LIB_DEPENDS=		libtbb.so:devel/onetbb
 THUMBNAILER_CMAKE_BOOL=		WITH_BLENDER_THUMBNAILER
 TRACE_CMAKE_BOOL=		WITH_POTRACE
 TRACE_LIB_DEPENDS=		libpotrace.so:graphics/libpotrace
-USD_BROKEN=			does not build with current USD port
+USD_BROKEN=			require devel/tbb, which conflicts with devel/onetbb: \
+				https://github.com/PixarAnimationStudios/OpenUSD/issues/1650
 USD_CMAKE_BOOL=			WITH_USD
 USD_IMPLIES=			TBB
-USD_LIB_DEPENDS=		libusd_ms.so:misc/usd
+USD_LIB_DEPENDS=		libusd_usd.so:misc/usd
 VULKAN_BUILD_DEPENDS=		${LOCALBASE}/include/vulkan/vulkan.h:graphics/vulkan-headers
 VULKAN_CMAKE_BOOL=		WITH_VULKAN_BACKEND
 VULKAN_LDFLAGS=			-lshaderc_shared -lSPIRV-Tools-shared
 VULKAN_LIB_DEPENDS=		libshaderc_shared.so:graphics/shaderc \
 				libSPIRV-Tools-shared.so:graphics/spirv-tools \
 				libvulkan.so:graphics/vulkan-loader
-VULKAN_USES=			localbase:ldflags # only relevant in the case of most options off
 WAYLAND_BUILD_DEPENDS=		wayland-protocols>=1.15:graphics/wayland-protocols \
 				wayland>=1.12:graphics/wayland \
 				libdecor>0:x11-toolkits/libdecor
@@ -191,12 +200,14 @@ WAYLAND_CMAKE_BOOL=		WITH_GHOST_WAYLAND WITH_GHOST_WAYLAND_LIBDECOR \
 WAYLAND_LIB_DEPENDS=		libxkbcommon.so:x11/libxkbcommon
 WEBP_CMAKE_BOOL=		WITH_IMAGE_WEBP
 WEBP_LIB_DEPENDS=		libwebp.so:graphics/webp
+XF86VMODE_CMAKE_BOOL=		WITH_X11_XF86VMODE
+XF86VMODE_USE=			XORG=xi,xxf86vm
 XINPUT_CMAKE_BOOL=		WITH_X11_XINPUT
 XINPUT_USE=			XORG=xi
 
 post-patch:
-	${REINPLACE_CMD} -e 's|%%LLVM_VER%%|${LLVM_VERSION}|g' \
-		${WRKSRC}/intern/cycles/kernel/osl/CMakeLists.txt
+	${REINPLACE_CMD} -e 's|%%VERS_TAG%%|${VERS_TAG}|g' \
+		${WRKSRC}/release/freedesktop/org.blender.Blender.metainfo.xml
 
 post-build:
 	@(cd ${WRKSRC}/doc/manpage && \
@@ -205,11 +216,32 @@ post-build:
 			--output ${INSTALL_WRKSRC}/bin/${PORTNAME}.1)
 
 post-install:
-	${INSTALL_MAN} ${INSTALL_WRKSRC}/bin/${PORTNAME}.1 \
-		${STAGEDIR}${PREFIX}/share/man/man1
-	${MV} ${STAGEDIR}/${PREFIX}/bin/blender ${STAGEDIR}/${PREFIX}/bin/blender-bin
-	${REINPLACE_CMD} -e 's|%%PYTHON_SITELIBDIR%%|${PYTHON_SITELIBDIR}|g' ${WRKDIR}/blender
-	${INSTALL_SCRIPT} ${WRKDIR}/blender ${STAGEDIR}/${PREFIX}/bin/blender
+	${REINPLACE_CMD} -e 's|%%VERS_TAG%%|${VERS_TAG}|g' \
+		-e 's|%%PYTHON_SITELIBDIR%%|${PYTHON_SITELIBDIR}|g' ${WRKDIR}/blender
+	${INSTALL_SCRIPT} ${WRKDIR}/blender ${STAGEDIR}${PREFIX}/bin/blender-${VERS_TAG}
+	${MV} ${STAGEDIR}${PREFIX}/bin/blender ${STAGEDIR}${PREFIX}/bin/blender-bin-${VERS_TAG}
+	${MKDIR} ${STAGEDIR}${DATADIR}
+	${MV} ${STAGEDIR}${PREFIX}/share/blender/${DISTVERSION:R}/* ${STAGEDIR}${DATADIR}
+	${FIND} ${STAGEDIR}${DATADIR}/scripts/addons_core -iname '*.orig' -delete
+	${RM} -R ${STAGEDIR}${PREFIX}/share/blender
+	${MKDIR} ${STAGEDIR}${DESKTOPDIR}
+	${MV} ${STAGEDIR}${DESKTOPDIR}/blender.desktop \
+		${STAGEDIR}${DESKTOPDIR}/${PORTNAME}.desktop
+	${REINPLACE_CMD} -i '' -e 's|%%VERS_TAG%%|${VERS_TAG}|g' \
+		${STAGEDIR}${DESKTOPDIR}/${PORTNAME}.desktop
+	${MKDIR} ${STAGEDIR}${LICDIR}
+	${MV} ${STAGEDIR}${PREFIX}/share/doc/blender/* ${STAGEDIR}${LICDIR}
+	${RM} -R ${STAGEDIR}${PREFIX}/share/doc/blender
+	${MV} ${STAGEDIR}${PREFIX}/share/icons/hicolor/symbolic/apps/blender-symbolic.svg \
+		${STAGEDIR}${PREFIX}/share/icons/hicolor/symbolic/apps/blender-symbolic-${VERS_TAG}.svg
+	${MV} ${STAGEDIR}${PREFIX}/share/icons/hicolor/scalable/apps/blender.svg \
+		${STAGEDIR}${PREFIX}/share/icons/hicolor/scalable/apps/blender-${VERS_TAG}.svg
+	${MV} ${STAGEDIR}${PREFIX}/share/metainfo/org.blender.Blender.metainfo.xml \
+		${STAGEDIR}${PREFIX}/share/metainfo/org.blender.Blender-${VERS_TAG}.metainfo.xml
+
+post-install-THUMBNAILER-on:
+	${MV} ${STAGEDIR}${PREFIX}/bin/blender-thumbnailer \
+		${STAGEDIR}${PREFIX}/bin/blender-thumbnailer-${VERS_TAG}
 
 post-install-DRACO-on:
 	# move draco pylib into site-packages
@@ -217,7 +249,7 @@ post-install-DRACO-on:
 	${INSTALL_LIB} ${INSTALL_WRKSRC}/lib/libextern_draco.so ${STAGEDIR}/${PYTHON_SITELIBDIR}/
 	${STRIP_CMD} ${STAGEDIR}/${PYTHON_SITELIBDIR}/libextern_draco.so
 	@${RM} -R ${STAGEDIR}/${DATADIR}/${DISTVERSION:R}/python
-	@${RM} ${STAGEDIR}/${DATADIR}/${DISTVERSION:R}/scripts/addons_core/io_scene_gltf2/libextern_draco.so
+	@${RM} ${STAGEDIR}/${DATADIR}/scripts/addons_core/io_scene_gltf2/libextern_draco.so
 
 post-install-MENU-on:
 	@-update-desktop-database -q
