--- a/graphics/blender4/Makefile.options
+++ b/graphics/blender4/Makefile.options
@@ -1,8 +1,11 @@
 OPTIONS_DEFINE=		\
 	ALEMBIC		\
+	AVI		\
 	BULLET		\
 	CAMERATRACK	\
 	CINEON		\
+	COLLADA		\
+	COMPOSITOR	\
 	CYCLES		\
 	CYCLES_EMBR	\
 	CYCLES_ONEAPI	\
@@ -18,8 +21,9 @@ OPTIONS_DEFINE=		\
 	HEADLESS	\
 	INPUT_NDOF	\
 	JACK		\
+	LZMA		\
+	LZO		\
 	MANIFOLD	\
-	MATERIALX	\
 	MENU		\
 	MOD_FLUID	\
 	MOD_OCEANSIM	\
@@ -30,6 +34,7 @@ OPTIONS_DEFINE=		\
 	OPENEXR		\
 	OPENIMAGEDN	\
 	OPENJPEG	\
+	OPENMP		\
 	OPENPGL		\
 	OPENSUBDIV	\
 	OPENVDB		\
@@ -39,7 +44,6 @@ OPTIONS_DEFINE=		\
 	PUGIXML		\
 	PULSEAUDIO	\
 	QUADRIFLOW	\
-	RUBBERBAND	\
 	SDL		\
 	SIMD		\
 	SNDFILE		\
@@ -50,15 +54,18 @@ OPTIONS_DEFINE=		\
 	VULKAN		\
 	WAYLAND		\
 	WEBP		\
-	XINPUT
+	XINPUT		\
+	XF86VMODE
 
 OPTIONS_DEFAULT=	\
 	ALEMBIC		\
+	AVI		\
 	BULLET		\
 	CINEON		\
+	COLLADA		\
+	COMPOSITOR	\
 	CYCLES		\
 	CYCLES_ONEAPI	\
-	DRACO		\
 	EBOOL		\
 	FFMPEG		\
 	FFTW3		\
@@ -67,8 +74,9 @@ OPTIONS_DEFAULT=	\
 	HARFBUZZ	\
 	HARU		\
 	INPUT_NDOF	\
+	LZMA		\
+	LZO		\
 	MANIFOLD	\
-	MATERIALX	\
 	MENU		\
 	MOD_FLUID	\
 	MOD_OCEANSIM	\
@@ -83,13 +91,14 @@ OPTIONS_DEFAULT=	\
 	PUGIXML		\
 	PULSEAUDIO	\
 	QUADRIFLOW	\
-	RUBBERBAND	\
+	SDL		\
 	TBB		\
 	THUMBNAILER	\
 	TRACE		\
 	WAYLAND		\
 	WEBP		\
-	XINPUT
+	XINPUT		\
+	XF86VMODE
 
 # CAMERATRACK: libunwind only supports i386/amd64/aarch64/powerpc64/powerpc64le
 # CYCLES_EMBR: embree only supports amd64 and i386
@@ -101,9 +110,12 @@ OPTIONS_DEFAULT_powerpc64=	CAMERATRACK
 OPTIONS_DEFAULT_powerpc64le=	CAMERATRACK
 
 ALEMBIC_DESC=		Enable Alembic file support
+AVI_DESC=		Enable Blender's own AVI file support
 BULLET_DESC=		Bullet physics engine
 CAMERATRACK_DESC=	Camera tracking support (amd64/aarch64/powerpc64/powerpc64le only)
 CINEON_DESC=		CINEON and DPX graphics format support
+COLLADA_DESC=		Enable read/write support for COLLADA files
+COMPOSITOR_DESC=	Use the tile-based nodal compositor
 CYCLES_DESC=		Cycles render engine support
 CYCLES_EMBR_DESC=	Embree support (amd64 only)
 CYCLES_ONEAPI_DESC=	Enable Cycles oneAPI compute support
@@ -118,8 +130,9 @@ HARFBUZZ_DESC=		Enable features using harfbuzz OpenType text shaping engine
 HARU_DESC=		Enable libharu support
 HEADLESS_DESC=		Disable user interface (for render-farms)
 INPUT_NDOF_DESC=	Enable NDOF input device support
+LZMA_DESC=		Best compression support
+LZO_DESC=		Fast compression support
 MANIFOLD_DESC=		Enable manifold boolean support
-MATERIALX_DESC=		Enable MaterialX support
 MENU_DESC=		Install desktop menu
 MOD_FLUID_DESC=		Fluid simulation support
 MOD_OCEANSIM_DESC=	Ocean simulation support
@@ -135,14 +148,14 @@ PIPEWIRE_DESC=		Enable Pipewire audio support
 POTRACE_DESC=		Enable features using libpotrace
 PUGIXML_DESC=		Enable pugixml support
 QUADRIFLOW_DESC=	Enable quadriflow remesher
-RUBBERBAND_DESC=	Use Rubber Band for audio time-stretching and pitch-scaling
-SDL_DESC=		Audio support using SDL
+SDL_DESC=		Audio and Joystick support using SDL
 SIMD_DESC=		Use SIMD optimized routines (on amd64 require x86-64-v2 support)
 TBB_DESC=		Enable use of Intel's tbb
 THUMBNAILER_DESC=	Build blender thumbnailer
 TRACE_DESC=		Enable tracing image to GP stroke
 USD_DESC=		Universal Scene Description Support (aarch64 and amd64 only, broken)
-VULKAN_DESC=		Enable Vulkan as graphics backend
+VULKAN_DESC=		Enable Vulkan as graphics backend (only for development)
 WAYLAND_DESC=		Wayland support
 WEBP_DESC=		Enable webp image support
+XF86VMODE_DESC=		X11 video mode switching support
 XINPUT_DESC=		X11 Xinput (tablet) support
