sysutils/mise: update 2026.2.0 → 2026.2.3
Reported by:	portscout

--- a/sysutils/mise/Makefile
+++ b/sysutils/mise/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mise
 DISTVERSIONPREFIX=	v
-DISTVERSION=	2026.2.0
+DISTVERSION=	2026.2.3
 CATEGORIES=	sysutils
 
 MAINTAINER=	yuri@FreeBSD.org
@@ -45,7 +45,7 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		anstyle-wincon-3.0.11 \
 		anyhow-1.0.100 \
 		arbitrary-1.4.2 \
-		arc-swap-1.8.0 \
+		arc-swap-1.8.1 \
 		arrayref-0.3.9 \
 		arrayvec-0.7.6 \
 		asn1-rs-0.7.1 \
@@ -65,20 +65,21 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		aws-lc-rs-1.15.4 \
 		aws-lc-sys-0.37.0 \
 		aws-runtime-1.5.18 \
-		aws-sdk-s3-1.119.0 \
+		aws-sdk-s3-1.121.0 \
 		aws-sdk-sts-1.96.0 \
 		aws-sigv4-1.3.7 \
-		aws-smithy-async-1.2.10 \
-		aws-smithy-checksums-0.63.12 \
-		aws-smithy-eventstream-0.60.17 \
+		aws-smithy-async-1.2.11 \
+		aws-smithy-checksums-0.63.13 \
+		aws-smithy-eventstream-0.60.18 \
 		aws-smithy-http-0.62.6 \
-		aws-smithy-http-client-1.1.8 \
+		aws-smithy-http-0.63.3 \
+		aws-smithy-http-client-1.1.9 \
 		aws-smithy-json-0.61.9 \
-		aws-smithy-observability-0.2.3 \
-		aws-smithy-query-0.60.12 \
-		aws-smithy-runtime-1.9.8 \
-		aws-smithy-runtime-api-1.11.2 \
-		aws-smithy-types-1.4.2 \
+		aws-smithy-observability-0.2.4 \
+		aws-smithy-query-0.60.13 \
+		aws-smithy-runtime-1.10.0 \
+		aws-smithy-runtime-api-1.11.3 \
+		aws-smithy-types-1.4.3 \
 		aws-smithy-xml-0.60.13 \
 		aws-types-1.3.11 \
 		backtrace-0.3.76 \
@@ -107,7 +108,7 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		bumpalo-3.19.1 \
 		bytecount-0.6.9 \
 		byteorder-1.5.0 \
-		bytes-1.11.0 \
+		bytes-1.11.1 \
 		bytes-utils-0.1.4 \
 		bytesize-2.3.1 \
 		bzip2-0.5.2 \
@@ -164,9 +165,9 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		core-foundation-sys-0.8.7 \
 		countme-3.0.1 \
 		cpufeatures-0.2.17 \
-		crc-3.4.0 \
+		crc-3.3.0 \
 		crc-catalog-2.4.0 \
-		crc-fast-1.6.0 \
+		crc-fast-1.9.0 \
 		crc32fast-1.5.0 \
 		crossbeam-channel-0.5.15 \
 		crossbeam-deque-0.8.6 \
@@ -368,7 +369,7 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		hyper-rustls-0.24.2 \
 		hyper-rustls-0.27.7 \
 		hyper-tls-0.6.0 \
-		hyper-util-0.1.19 \
+		hyper-util-0.1.20 \
 		i18n-config-0.4.8 \
 		i18n-embed-0.15.4 \
 		i18n-embed-fl-0.9.4 \
@@ -395,7 +396,7 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		indicatif-0.17.11 \
 		indoc-2.0.7 \
 		inout-0.1.4 \
-		insta-1.46.2 \
+		insta-1.46.3 \
 		intl-memoizer-0.5.3 \
 		intl_pluralrules-7.0.2 \
 		io-close-0.3.7 \
@@ -447,13 +448,12 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		logos-0.12.1 \
 		logos-derive-0.12.1 \
 		loom-0.5.6 \
-		lru-0.12.5 \
+		lru-0.16.3 \
 		lru-slab-0.1.2 \
 		lua-src-550.0.0 \
 		luajit-src-210.6.6+707c12b \
 		lzma-rs-0.3.0 \
 		lzma-rust-0.1.7 \
-		lzma-rust2-0.13.0 \
 		lzma-rust2-0.15.7 \
 		lzma-sys-0.1.20 \
 		matchers-0.2.0 \
@@ -473,7 +473,7 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		mlua-0.11.6 \
 		mlua-sys-0.10.0 \
 		mlua_derive-0.11.0 \
-		mockito-1.7.1 \
+		mockito-1.7.2 \
 		multimap-0.10.1 \
 		native-tls-0.2.14 \
 		ndk-context-0.1.1 \
@@ -637,8 +637,8 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		scc-2.4.0 \
 		schannel-0.1.28 \
 		schemars-0.9.0 \
-		schemars-1.2.0 \
-		schemars_derive-1.2.0 \
+		schemars-1.2.1 \
+		schemars_derive-1.2.1 \
 		scoped-tls-1.0.1 \
 		scopeguard-1.2.0 \
 		scrypt-0.11.0 \
@@ -704,6 +704,7 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		socket2-0.5.10 \
 		socket2-0.6.2 \
 		spin-0.9.8 \
+		spin-0.10.0 \
 		spki-0.7.3 \
 		stable_deref_trait-1.2.1 \
 		static_assertions-1.1.0 \
@@ -719,7 +720,7 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		sync_wrapper-1.0.2 \
 		synstructure-0.13.2 \
 		sys-info-0.9.1 \
-		system-configuration-0.6.1 \
+		system-configuration-0.7.0 \
 		system-configuration-sys-0.6.0 \
 		tabled-0.20.0 \
 		tabled_derive-0.11.0 \
@@ -773,6 +774,7 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		try-lock-0.2.5 \
 		type-map-0.5.1 \
 		typed-path-0.9.3 \
+		typed-path-0.12.2 \
 		typeid-1.0.3 \
 		typenum-1.19.0 \
 		ubi-0.8.4 \
@@ -896,7 +898,7 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		x509-parser-0.18.0 \
 		xattr-1.6.1 \
 		xmlparser-0.13.6 \
-		xx-2.3.0 \
+		xx-2.5.1 \
 		xz2-0.1.7 \
 		yansi-1.0.1 \
 		yoke-0.8.1 \
@@ -912,10 +914,10 @@ CARGO_CRATES=	addr2line-0.25.1 \
 		zerovec-derive-0.11.2 \
 		zip-2.4.2 \
 		zip-3.0.0 \
-		zip-6.0.0 \
+		zip-7.2.0 \
 		zipsign-api-0.1.5 \
 		zlib-rs-0.5.5 \
-		zmij-1.0.18 \
+		zmij-1.0.19 \
 		zopfli-0.8.3 \
 		zstd-0.13.3 \
 		zstd-safe-7.2.4 \
