lang/python-doc-pdf-a4: remove
No longer provided since 3.13

(cherry picked from commit 5e61a90f3a2307b70e48a2aab08c021b417eedd0)

--- a/lang/python-doc-html/Makefile
+++ b/lang/python-doc-html/Makefile
@@ -20,7 +20,7 @@ NO_BUILD=	yes
 DOCSDIR=	${PREFIX}/share/doc/${PYTHON_VERSION}
 PLIST=		${WRKDIR}/pkg-plist.${DOCFORMAT}
 
-DOCFORMATS=	html pdf-a4 text
+DOCFORMATS=	html text
 DOCFORMAT?=	html
 
 .if empty(DOCFORMATS:M${DOCFORMAT})
