sysutils/xclipsync: New port: Trivial tool for synchronizing the clipboard between two X11 sessions
xclipsync is a simple and lightweight script for synchronizing the
clipboard between two X servers created, for example, by Xephyr(1) or
Xnest(1), or even for synchronizing the clipboard between the host and
another X server.

WWW: https://github.com/DtxdF/xclipsync

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1615,6 +1615,7 @@
     SUBDIR += xbatt
     SUBDIR += xbattbar
     SUBDIR += xcdroast
+    SUBDIR += xclipsync
     SUBDIR += xcp
     SUBDIR += xcpustate
     SUBDIR += xdu
