--- a/net-mgmt/victoria-logs/Makefile
+++ b/net-mgmt/victoria-logs/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	victoria-logs
 PORTVERSION=	1.44.0
-PORTREVISION=	1
 DISTVERSIONPREFIX=	v
+PORTREVISION=	1
 CATEGORIES=	net-mgmt
 
 MAINTAINER=	samm@FreeBSD.org
@@ -18,22 +18,24 @@ USES=		gmake go:1.25+,modules,no_targets
 USE_GITHUB=	yes
 GH_ACCOUNT=	VictoriaMetrics
 GH_PROJECT=	VictoriaLogs
-GO_MODULE=	github.com/${GH_ACCOUNT}/${GH_PROJECT}
-GO_MOD_DIST=	github
-
 USE_RC_SUBR?=	victoria_logs
 
-MAKE_ENV=	PKG_TAG=v${PORTVERSION} GOOS=${OPSYS:tl} \
-		BUILDINFO_TAG=tags-v${PORTVERSION}-victorialogs \
-		DATEINFO_TAG=${_GET_DATE:sh} GOFLAGS=-buildvcs=false
+GO_MOD_DIST=	github
+GO_MODULE=	github.com/${GH_ACCOUNT}/${GH_PROJECT}
+
+MAKE_ENV=	BUILDINFO_TAG=tags-v${PORTVERSION}-victorialogs \
+		DATEINFO_TAG=${_GET_DATE:sh} \
+		GOFLAGS=-buildvcs=false \
+		GOOS=${OPSYS:tl} \
+		PKG_TAG=v${PORTVERSION}
 ALL_TARGET=	${PORTNAME}-pure vlogscli-pure vmalert-pure
+
+SUB_LIST+=	VICTORIA_DATA=${VICTORIA_DATA} \
+		VICTORIA_USER=${USERS}
 
 USERS=		victoria-logs
 GROUPS=		victoria-logs
 VICTORIA_DATA?=	/var/db/victoria-logs
-
-SUB_LIST+=	VICTORIA_DATA=${VICTORIA_DATA} \
-		VICTORIA_USER=${USERS}
 
 PLIST_SUB+=	VICTORIA_DATA=${VICTORIA_DATA} \
 		VICTORIA_GROUP=${GROUPS} \
