devel/rubygem-listen-gitlab: new port required for vagrant-gitlab

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7659,6 +7659,7 @@
     SUBDIR += rubygem-licensee-gitlab
     SUBDIR += rubygem-lint_roller
     SUBDIR += rubygem-listen
+    SUBDIR += rubygem-listen-gitlab
     SUBDIR += rubygem-little-plugger
     SUBDIR += rubygem-local_time
     SUBDIR += rubygem-local_time-rails5
