--- a/comms/xastir/Makefile
+++ b/comms/xastir/Makefile
@@ -1,12 +1,11 @@
 PORTNAME=	xastir
 DISTVERSIONPREFIX=	Release-
-DISTVERSION=	2.2.0
-PORTREVISION=	10
+DISTVERSION=	2.2.2
 CATEGORIES=	comms hamradio
 
 MAINTAINER=	hamradio@FreeBSD.org
 COMMENT=	X Amateur Station Tracking and Information Reporting
-WWW=		http://www.xastir.org/
+WWW=		https://github.com/Xastir/Xastir/wiki
 
 LICENSE=	GPLv2
 LICENSE_FILE=	${WRKSRC}/COPYING
@@ -17,17 +16,19 @@ LIB_DEPENDS=	libfreetype.so:print/freetype2 \
 		libjasper.so:graphics/jasper \
 		libjbig.so:graphics/jbigkit \
 		liblcms2.so:graphics/lcms2 \
-		libpng.so:graphics/png \
 		libshp.so:devel/shapelib \
+		libpng.so:graphics/png \
 		libtiff.so:graphics/tiff \
 		libwebp.so:graphics/webp \
 		libwebpmux.so:graphics/webp \
 		libwmflite.so:graphics/libwmf \
 		libpcre2-8.so:devel/pcre2 \
 		libjxl.so:graphics/libjxl \
-		libjxl_threads.so:graphics/libjxl
+		libjxl_threads.so:graphics/libjxl \
+		libproj.so:graphics/proj \
+		libGraphicsMagick.so:graphics/GraphicsMagick
 
-USES=		autoreconf gmake gnome jpeg motif shebangfix xorg
+USES=		autoreconf gmake gnome jpeg motif shebangfix xorg bdb:18
 
 USE_XORG=	ice sm x11 xext xt
 USE_GNOME+=	libxml2
@@ -43,11 +44,11 @@ GH_PROJECT=	Xastir
 
 SUB_FILES=	pkg-message
 
-CONFIGURE_ARGS=	--without-map-cache
+CONFIGURE_ARGS=	--with-bdb-libdir=${BDB_LIB_DIR} \
+		--with-bdb-incdir=${BDB_INCLUDE_DIR} \
+		--with-graphicsmagick
 
-OPTIONS_DEFINE=		CURL DAVIS ERRORPOP FESTIVAL GEOTIFF GPSMAN
-OPTIONS_RADIO=		MGG
-OPTIONS_RADIO_MGG=	GMAGICK IMAGICK
+OPTIONS_DEFINE=		DOCS CURL DAVIS ERRORPOP FESTIVAL GEOTIFF GPSMAN
 
 DAVIS_DESC=	Include Davis Weatherstation Support
 CURL_DESC=	Include CURL Internet Image support
@@ -55,33 +56,20 @@ GEOTIFF_DESC=	Include GeoTIFF Support
 GPSMAN_DESC=	Include GPSMAN Support
 FESTIVAL_DESC=	Include Festival Voice Synthesis Support
 ERRORPOP_DESC=	Send error popups to stderr
-MGG_DESC=	Image library for raster map processing
-IMAGICK_DESC=	ImageMagick (Version 6)
-GMAGICK_DESC=	GraphicsMagick (Needs GCC to compile)
 
-OPTIONS_DEFAULT=	CURL GMAGICK
+OPTIONS_DEFAULT=	CURL GEOTIFF
 
 DAVIS_CONFIGURE_ON=	--enable-davis
-
-IMAGICK_USES=		magick:6
-IMAGICK_CONFIGURE_WITH=	imagemagick
-
-GMAGICK_LIB_DEPENDS=	libGraphicsMagickWand.so:graphics/GraphicsMagick
-GMAGICK_CONFIGURE_WITH=	graphicsmagick
-GMAGICK_USES=		compiler:gcc-c++11-lib
 
 CURL_LIB_DEPENDS=	libcurl.so:ftp/curl
 
 GEOTIFF_LIB_DEPENDS=	libgeotiff.so:graphics/libgeotiff
 
 GPSMAN_BUILD_DEPENDS=	${LOCALBASE}/share/doc/gpsmanshp/GPSManSHP.pdf:graphics/gpsmanshp
-GPSMAN_IMPLIES=		SHAPELIB
 GPSMAN_CONFIGURE_WITH=	gpsman
 
 FESTIVAL_BUILD_DEPENDS=		festival:audio/festival
 FESTIVAL_CONFIGURE_WITH=	festival
-
-#RTREE_CONFIGURE_WITH=	rtree
 
 ERRORPOP_CONFIGURE_WITH=	errorpopups
 
