--- a/devel/cirrus-cli/Makefile
+++ b/devel/cirrus-cli/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	cirrus-cli
 DISTVERSIONPREFIX=	v
 DISTVERSION=	0.161.1
+PORTREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	bofh@FreeBSD.org
