--- a/www/filebrowser-quantum/Makefile
+++ b/www/filebrowser-quantum/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	filebrowser-quantum
 DISTVERSIONPREFIX=	v
 DISTVERSION=	1.1.1
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	www
 MASTER_SITES=	LOCAL/dtxdf/${PORTNAME}/
