devel/freebsd-git-arc: Improve discoverability with new port name
Split the old devel/freebsd-git-devtools port into two separate ports,
including this one, to improve discoverability.

Requested by:	adrian, ziaee
Reviewed by:	des, ziaee
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D55129

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -734,7 +734,6 @@
     SUBDIR += freebsd-gcc13
     SUBDIR += freebsd-gcc14
     SUBDIR += freebsd-gcc15
-    SUBDIR += freebsd-git-devtools
     SUBDIR += freebsd-nvme-shim
     SUBDIR += freebsd-sysroot
     SUBDIR += frink
@@ -838,6 +837,7 @@
     SUBDIR += gio-sharp
     SUBDIR += git
     SUBDIR += git-absorb
+    SUBDIR += freebsd-git-arc
     SUBDIR += git-branchless
     SUBDIR += git-bug
     SUBDIR += git-cinnabar
