net/mosquitto: Update to 2.1.1
Changes since 2.0.22:

    https://github.com/eclipse-mosquitto/mosquitto/blob/release/2.1/ChangeLog.txt

Reported by:	portscout

--- a/net/mosquitto/Makefile
+++ b/net/mosquitto/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	mosquitto
-DISTVERSION=	2.0.22
-PORTREVISION=	1
+DISTVERSION=	2.1.1
 CATEGORIES=	net
 MASTER_SITES=	https://mosquitto.org/files/source/
 
@@ -13,14 +12,17 @@ LICENSE=	EPL
 BUILD_DEPENDS=	docbook-xsl>0:textproc/docbook-xsl \
 		xsltproc:textproc/libxslt
 LIB_DEPENDS=	libcjson.so:devel/libcjson \
+		libsqlite3.so:databases/sqlite3 \
 		libuuid.so:misc/libuuid
 RUN_DEPENDS=	${LOCALBASE}/share/certs/ca-root-nss.crt:security/ca_root_nss
 
 USES=		cmake cpe ssl
 USE_RC_SUBR=	mosquitto
 USE_LDCONFIG=	yes
-CMAKE_ARGS=	-DCMAKE_LIBDATADIR:PATH="${PREFIX}/libdata"
+CMAKE_ARGS=	-DCMAKE_LIBDATADIR:PATH="${PREFIX}/libdata" \
+		-DWITH_TESTS:BOOL=OFF
 CPE_VENDOR=	eclipse
+
 
 USERS=		nobody
 
@@ -41,14 +43,9 @@ post-patch:
 	@${REINPLACE_CMD} -e 's|%%PREFIX%%|${PREFIX}|g' ${WRKSRC}/CMakeLists.txt
 
 post-install:
-	${SED} -e '/cafile/s,/usr/local,${LOCALBASE},' \
-		${STAGEDIR}${ETCDIR}/mosquitto.conf > \
-		${STAGEDIR}${ETCDIR}/mosquitto.conf.sample
-	${MV} ${STAGEDIR}${ETCDIR}/pwfile.example \
-		${STAGEDIR}${ETCDIR}/pwfile.sample
-	${MV} ${STAGEDIR}${ETCDIR}/pskfile.example \
-		${STAGEDIR}${ETCDIR}/pskfile.sample
-	${MV} ${STAGEDIR}${ETCDIR}/aclfile.example \
-		${STAGEDIR}${ETCDIR}/aclfile.sample
+.for F in mosquitto.conf pwfile pskfile aclfile
+	${MV} ${STAGEDIR}${ETCDIR}/${F}.example \
+		${STAGEDIR}${ETCDIR}/${F}.sample
+.endfor
 
 .include <bsd.port.mk>
