security/boringssl: update to the recent snapshot
Sponsored by:	tipi.work

--- a/security/boringssl/Makefile
+++ b/security/boringssl/Makefile
@@ -1,8 +1,7 @@
 PORTNAME=	boringssl
-PORTVERSION=	0.20251124.0
-PORTREVISION=	3
+PORTVERSION=	0.20260204.0
 CATEGORIES=	security
-EXTRACT_ONLY=	${GH_ACCOUNT}-${PORTNAME}-${PORTVERSION}_GH0.tar.gz
+EXTRACT_ONLY=	${GH_ACCOUNT}-${PORTNAME}-${PORTVERSION}-${GH_TAGNAME}_GH0.tar.gz
 
 MAINTAINER=	osa@FreeBSD.org
 COMMENT=	Fork of OpenSSL
@@ -20,6 +19,7 @@ CPE_VENDOR=	google
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	google
+GH_TAGNAME=	a35389e
 CMAKE_ARGS+=	-DBUILD_SHARED_LIBS=1
 
 CFLAGS_i386=	-msse2
