devel/py-spy: New port: Sampling profiler for Python programs

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6043,6 +6043,7 @@
     SUBDIR += py-speaklater
     SUBDIR += py-speg
     SUBDIR += py-spin
+    SUBDIR += py-spy
     SUBDIR += py-spyder-kernels
     SUBDIR += py-sqids
     SUBDIR += py-sqlfluff
