multimedia/navidrome: Return to pool
This is a useful piece of software but between Go and Node being
grotesque in their own ways I don't enjoy working on this any longer.

--- a/multimedia/navidrome/Makefile
+++ b/multimedia/navidrome/Makefile
@@ -4,7 +4,7 @@ DISTVERSION=	0.59.0
 PORTREVISION=	2
 CATEGORIES=	multimedia
 
-MAINTAINER=	kbowling@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Modern Music Server and Streamer compatible with Subsonic/Airsonic
 WWW=		https://www.navidrome.org/
 
