--- a/www/librewolf/Makefile
+++ b/www/librewolf/Makefile
@@ -1,7 +1,8 @@
 PORTNAME=	librewolf
 DISTVERSION=	147.0.3
-LWPATCH=	-1
+LWPATCH=	-2
 DISTVERSIONSUFFIX=	${LWPATCH}.source
+PORTREVISION=	1
 CATEGORIES=	www wayland
 MASTER_SITES=	https://codeberg.org/api/packages/librewolf/generic/librewolf-source/${DISTVERSION}${LWPATCH}/
 
