devel/nextpnr-devel: Add new port
This is a version of the existing devel/nextpnr port tracking the upstream master
branch as actual releases happen rarely and most users outside of FreeBSD use
the shell script based oss-cad-suite to build/install nextpnr.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1717,6 +1717,7 @@
     SUBDIR += newtonsoft-json
     SUBDIR += nextest
     SUBDIR += nextpnr
+    SUBDIR += nextpnr-devel
     SUBDIR += nexus2-oss
     SUBDIR += nimble
     SUBDIR += nini
