securty/nmap*: Fix dbus build
PR:	292989

--- a/security/nmap-devel/Makefile
+++ b/security/nmap-devel/Makefile
@@ -19,7 +19,8 @@ LICENSE_PERMS=	auto-accept dist-mirror pkg-mirror pkg-sell
 
 IGNORE_FreeBSD_13=	 Does not build on FreeBSD 13.x due to OpenSSL 1.1.1
 
-LIB_DEPENDS=	libpcre2-16.so:devel/pcre2
+LIB_DEPENDS=	libpcre2-16.so:devel/pcre2 \
+		libdbus-1.so:devel/dbus
 
 .if !defined(MASTERDIR)
 
@@ -43,12 +44,13 @@ CONFIGURE_ARGS=--without-localdirs \
 MAKE_JOBS_UNSAFE=	yes
 GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
 
+LDFLAGS+=	-L${LOCALBASE}/lib -ldbus-1
+
 OPTIONS_DEFINE=	DOCS NLS PCAP SSH2 SSL
 OPTIONS_DEFAULT=NLS SSH2 SSL
 OPTIONS_SUB=	yes
 
 PCAP_DESC=		Build with libpcap from nmap
-PCAP_BROKEN=		Broken libdbus linkage with builtin PCAP
 SSH2_DESC=		SSH2 protocol support
 
 NLS_CONFIGURE_ENABLE=	nls
