--- a/security/nmap/Makefile
+++ b/security/nmap/Makefile
@@ -17,7 +17,8 @@ LICENSE_NAME=	Nmap Public Source License
 LICENSE_PERMS=	auto-accept dist-mirror pkg-mirror pkg-sell
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-LIB_DEPENDS=	libpcre2-16.so:devel/pcre2
+LIB_DEPENDS=	libpcre2-16.so:devel/pcre2 \
+		libdbus-1.so:devel/dbus
 
 .if !defined(MASTERDIR)
 
@@ -32,6 +33,8 @@ MAKE_JOBS_UNSAFE=	yes
 GNU_CONFIGURE=	yes
 GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
 
+LDFLAGS+=	-L${LOCALBASE}/lib -ldbus-1
+
 OPTIONS_SUB=	yes
 OPTIONS_DEFINE=	DOCS NLS PCAP SSH2 SSL
 OPTIONS_DEFAULT=NLS SSH2 SSL
@@ -41,7 +44,6 @@ SSH2_DESC=		SSH2 protocol support
 
 NLS_CONFIGURE_ENABLE=	nls
 PCAP_CONFIGURE_ON=	--with-libpcap=included
-PCAP_BROKEN=		Broken libdbus linkage with builtin PCAP
 SSH2_CONFIGURE_ON=	--with-libssh2=included
 SSH2_CONFIGURE_OFF=	--without-libssh2
 SSH2_IMPLIES=		SSL
