net-p2p/go-ethereum: Update 1.12.2 => 1.16.8
The karalabe/hid vendored package was trying to include hidapi source
files that don't exist in the vendor directory. This patch modifies
the build to use FreeBSD's installed hidapi library instead.

Changes:
- Link against system libhidapi library.
- Use hidapi headers instead of including source.
- Add necessary C standard library headers for FreeBSD.

Changelogs:
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.0
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.1
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.2
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.3
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.4
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.5
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.6
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.7
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.8
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.9
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.10
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.11
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.12
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.13
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.14
https://github.com/ethereum/go-ethereum/releases/tag/v1.13.15
https://github.com/ethereum/go-ethereum/releases/tag/v1.14.0
https://github.com/ethereum/go-ethereum/releases/tag/v1.14.1
https://github.com/ethereum/go-ethereum/releases/tag/v1.14.2
https://github.com/ethereum/go-ethereum/releases/tag/v1.14.3
https://github.com/ethereum/go-ethereum/releases/tag/v1.14.4
https://github.com/ethereum/go-ethereum/releases/tag/v1.14.5
https://github.com/ethereum/go-ethereum/releases/tag/v1.14.6
https://github.com/ethereum/go-ethereum/releases/tag/v1.14.7
https://github.com/ethereum/go-ethereum/releases/tag/v1.14.8
https://github.com/ethereum/go-ethereum/releases/tag/v1

--- a/net-p2p/go-ethereum/Makefile
+++ b/net-p2p/go-ethereum/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	go-ethereum
 DISTVERSIONPREFIX=	v
-DISTVERSION=	1.12.2
-PORTREVISION=	22
+DISTVERSION=	1.16.8
 CATEGORIES=	net-p2p
 
 MAINTAINER=	me@enriquefynn.com
@@ -11,7 +10,8 @@ WWW=		https://github.com/ethereum/go-ethereum
 LICENSE=	GPLv3
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-LIB_DEPENDS=	libiconv.so:converters/libiconv
+LIB_DEPENDS=	libiconv.so:converters/libiconv \
+		libhidapi.so:comms/hidapi
 
 USES=		cpe go:modules
 CPE_VENDOR=	ethereum
@@ -27,7 +27,7 @@ OPTIONS_DEFINE=	DEVTOOLS
 OPTIONS_SUB=	yes
 DEVTOOLS_DESC=	Ethereum developer tools
 
+DEVTOOLS_VARS=		GO_TARGET="./cmd/geth ./cmd/abigen ./cmd/evm ./cmd/rlpdump ./cmd/clef"
 DEVTOOLS_VARS_OFF=	GO_TARGET=./cmd/geth
-DEVTOOLS_VARS=		GO_TARGET="./cmd/geth ./cmd/abigen ./cmd/bootnode ./cmd/evm ./cmd/rlpdump ./cmd/clef"
 
 .include <bsd.port.mk>
