--- a/security/nmap-devel/Makefile
+++ b/security/nmap-devel/Makefile
@@ -41,9 +41,6 @@ CONFIGURE_ARGS=--without-localdirs \
 		--with-liblua=included \
 		--without-nmap-update
 MAKE_JOBS_UNSAFE=	yes
-GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
-
-LDFLAGS+=	-L${LOCALBASE}/lib -ldbus-1
 
 OPTIONS_DEFINE=	DOCS NLS PCAP SSH2 SSL
 OPTIONS_DEFAULT=NLS SSH2 SSL
@@ -55,6 +52,8 @@ SSH2_DESC=		SSH2 protocol support
 NLS_CONFIGURE_ENABLE=	nls
 PCAP_CONFIGURE_ON=	--with-libpcap=included
 PCAP_LIB_DEPENDS=	libdbus-1.so:devel/dbus
+PCAP_USES=		localbase:ldflags
+PCAP_LDFLAGS=		-ldbus-1
 SSH2_IMPLIES=		SSL
 SSH2_CONFIGURE_ON=	--with-libssh2=included
 SSH2_CONFIGURE_OFF=	--without-libssh2
