net-mgmt/nagios4: Fix build with OpenSSL from ports
Approved by:	hard.egg0918@fastmail.com (maintainer, via email)

--- a/net-mgmt/nagios4/Makefile
+++ b/net-mgmt/nagios4/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	nagios
 DISTVERSION=	4.5.11
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	net-mgmt
 MASTER_SITES=	https://assets.nagios.com/downloads/nagioscore/releases/ \
@@ -36,6 +37,8 @@ CONFIGURE_ARGS=	--with-command-user=${NAGIOSUSER} \
 		--with-cgiurl=${NAGIOSCGIURL} \
 		--with-lockfile=${NAGIOSDIR}/${PORTNAME}.lock \
 		--with-cgibindir=${WWWDIR}/cgi-bin \
+		--with-ssl-inc=${OPENSSLINC} \
+		--with-ssl-lib=${OPENSSLLIB} \
 		--libexecdir=${PREFIX}/libexec/${PORTNAME} \
 		--datadir=${WWWDIR} \
 		--sysconfdir=${ETCDIR} \
