net/mosquitto: Fix websockets options
Rename WEBSOCKET to WEBSOCKETS to match the cmake options. Add
WEBSOCKETS_BUILTIN option. I'd like to have WEBSOCKETS control if
websockets is supported at all and WEBSOCKETS_BUILTIN switch between
the bundled and ports versions but the latter doesn't build so mark
BROKEN and open an upstream issue:

    https://github.com/eclipse-mosquitto/mosquitto/issues/3478

One effect of these changes is that libwebsockets is no longer a
LIB_DEPENDS for the port; this will become a possibility once
WEBSOCKETS_BUILTIN OFF works again.

PR:		293005
Reported by:	alexander@wittig.name

--- a/net/mosquitto/Makefile
+++ b/net/mosquitto/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mosquitto
 DISTVERSION=	2.1.1
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	net
 MASTER_SITES=	https://mosquitto.org/files/source/
 
@@ -28,14 +28,23 @@ USERS=		nobody
 
 PLIST_SUB=	DISTVERSION=${DISTVERSION}
 
-OPTIONS_DEFINE=		CARES WEBSOCKET
-OPTIONS_DEFAULT=	CARES WEBSOCKET
+OPTIONS_DEFINE=		CARES WEBSOCKETS WEBSOCKETS_BUILTIN
+OPTIONS_DEFAULT=	CARES WEBSOCKETS WEBSOCKETS_BUILTIN
 
 CARES_LIB_DEPENDS=	libcares.so:dns/c-ares
 CARES_CMAKE_ON=		-DWITH_SRV:BOOL=ON
 
-WEBSOCKET_LIB_DEPENDS=	libwebsockets.so:net/libwebsockets
-WEBSOCKET_CMAKE_ON=	-DWITH_WEBSOCKETS:BOOL=ON
+WEBSOCKETS_DESC=			$(WEBSOCKET_DESC)
+WEBSOCKETS_CMAKE_OFF=			-DWITH_WEBSOCKETS:BOOL=OFF
+WEBSOCKETS_BUILTIN_CMAKE_OFF=		-DWITH_WEBSOCKETS_BUILTIN:BOOL=OFF
+WEBSOCKETS_BUILTIN_DESC=		Use bundled version of websockets
+WEBSOCKETS_BUILTIN_LIB_DEPENDS_OFF=	libwebsockets.so:net/libwebsockets
+
+.include <bsd.port.options.mk>
+
+.if ${PORT_OPTIONS:MWEBSOCKETS} && !${PORT_OPTIONS:MWEBSOCKETS_BUILTIN}
+BROKEN=		building without WEBSOCKETS_BUILTIN fails
+.endif
 
 post-patch:
 	@${REINPLACE_CMD} -e '/ldconfig/d' ${WRKSRC}/src/CMakeLists.txt \
